167: * fixed double scroll that appeared after merge

--- a/frontend/src/app/modules/settings/settings-page/settings-page.component.sass
+++ b/frontend/src/app/modules/settings/settings-page/settings-page.component.sass
@@ -1,5 +1,4 @@
 .container
-    height: 100%
     display: flex
     flex-direction: row
     gap: 50px
